--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <form>
       <h1>Login</h1>
       <input type="email" placeholder="E-mail" />
-      <input type="Senha" placeholder="Senha" />
+      <input type="password" placeholder="Senha" />
       <a href="#">Esqueceu sua senha?</a>
       <button>Logar</button>
     </form>
